feat: expand process designer and WSS security